cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_315.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rand/drbg_hmac.c:203: error: DEAD_STORE
  The value written to &hmac (type rand_drbg_hmac_st*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rand/drbg_hmac.c:203:5: Write of unused value
201.   {
202.       EVP_MD *md = NULL;
203.       RAND_DRBG_HMAC *hmac = &drbg->data.hmac;
           ^
204.   
205.       /*
